# leave_management_system

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  Notes - For reference only - delete after use.txt  README.md  alembic.ini  bandit.yaml  pyproject.toml  tasks.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
app/: __init__.py  config.py  db.py  logging_utils.py  main.py
app/admin/: __init__.py  dashboard.py  routes.py
app/employee/: __init__.py  dashboard.py  routes.py
app/leave/: units.py
app/models/: __init__.py  department.py  worktime_config.py
app/routes/admin/: departments.py
app/templates/: base.html
docker/: Dockerfile  docker-compose.proxy.yml  docker-compose.yml
docs/adr/: 001-tenancy-model.md  002-auth-rbac.md  004-leave-rounding.md
docs/catalogs/: analytics_events.md  business_rules.md  error_contracts.md  ui_patterns.md  validations.md
docs/deployment/: deployment-decisions.md  faq.md  server.env.example
docs/handbook/: README.md  api-conventions.md  architecture.md  authentication-authz.md  cicd.md  data-governance.md  devex.md  docker-k8s.md  environments-config.md  observability.md  security-baseline.md  tech-stack.md  testing-strategy.md  ui-ux-style-guide.md
docs/openapi/: leave_mgmt.yaml
docs/registries/: apis.csv  entities.csv  notifications.csv  reports.csv  rules.csv  screens.csv  validations.csv  workflows.csv
docs/security/: data-residency-encryption-compliance.md
migrations/: README  env.py  script.py.mako
tests/: conftest.py  test_health.py
(+47 files in other folders)
